# apertium-cym

./: .gitattributes  Makefile.am  apertium-cym.cym.acx  apertium-cym.cym.dix  apertium-cym.cym.rlx  apertium-cym.cym.udx  apertium-cym.pc.in  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
